# QuantumAI

./: .env.example  .gitignore  Dockerfile  LICENSE  LICENSE.md  README.md  config.json  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  ci_cd.yml  cloudflare-deploy.yml  deploy.yml  linting.yml  store_test_logs.yml  test_verification.yml
ai_engine/: quantum_neural_network.py
backend/: quantumai_backend.py
core/: circuits.py  performance.py
docker/: deploy.sh
docs/: ARCHITECTURE.md  CI_CD.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  contributor_roadmap.md
frontend/src/components/: QuantumChat.tsx
profiling/: performance_profiler.py
quantum_ai/: __init__.py  quantum_optimizer.py
quantum_ai/api/: main.py
quantum_ai/circuits/: quantum_layer.py
quantum_ai/core/: circuits.py
scripts/: encrypt_and_push_ipfs.py
security/: post_quantum_crypto.py
src/: App.tsx  index.css  quantum_circuit.py
src/ai/: model.py
src/api/: quantum_api.py
src/core/: self_improve.py
src/deployment/: deploy_api.py
src/models/: quantum_attention.py  train_quantum_mistral.py
src/pages/: Documentation.tsx
src/quantum/: core.py
src/training/: fine_tune.py
tests/: test_core.py  test_hybrid_model.py  test_quantum.py  test_quantum_ai.py  test_quantum_algorithms.py  test_quantum_circuit.py
