[tool.poetry]
name = "quantum_ai"
version = "0.1.0"
description = "Quantum-enhanced machine learning framework"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.23.5"
pennylane = "0.31.0"
torch = "^2.0.0"
fastapi = "^0.103.0"
uvicorn = "^0.23.0"
qiskit = "^0.44.0"
transformers = "^4.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
