[tool.poetry]
name = "quantum-ai"
version = "0.1.0"
description = "Quantum-enhanced AI framework"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
qiskit = "^0.39.0"
pennylane = "^0.31.0"
torch = "^2.0.0"
numpy = "^1.23.0"
scipy = "^1.9.0"
fastapi = "^0.95.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
