[tool.poetry]
name = "quantumai"
version = "0.1.0"
description = "Enterprise-grade framework for quantum-enhanced AI and AGI"
authors = ["QuantumAI Team"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
qiskit = "^0.43.0"
pennylane = "^0.30.0"
torch = "^2.0.0"
tensorflow = "^2.13.0"
cirq = "^1.2.0"
amazon-braket-sdk = "^1.55.0"
numpy = "^1.24.0"
pydantic = "^2.0.0"
pycryptodome = "^3.17.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
